[package]
name = "simple_payment_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.136", features = ["derive"]}
rust_decimal = "1.23.1"
csv = "1.1.6"
log = "0.4.16"
mockall = "0.11.0"